@@ -25,6 +25,7 @@
   * DocumentFragment#css delegates to it's child nodes GH #123
   * NodeSet#[] works with slices larger than NodeSet#length GH #131
   * Reparented nodes maintain their namespace. GH #134
+  * Fixed SEGV when adding an XML::Document to NodeSet
 
 === 1.3.3 / 2009/07/26
 
